--- a/src/views/search-sense/search.module.scss
+++ b/src/views/search-sense/search.module.scss
@@ -1,4 +1,5 @@
 .search {
-  height: 100vh;
-
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
